tortoise-tts added

--- a/tortoise_tts_main.ipynb
+++ b/tortoise_tts_main.ipynb
@@ -2,6 +2,13 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Run the above notebook in colab GPU only"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "o-vr-xB-mHXz"
       },
